--- a/README.textile
+++ b/README.textile
@@ -87,6 +87,22 @@ Here is an example of what you could do, if you had a @yield(:head)@ in the @hea
 
 That's all there is to it!
 
+h2. Validation
+
+If you require the user to upload an image, you can use this handy validation helper.
+
+<pre>
+  class Article < ActiveRecord::Base
+
+    has_imagination :photo
+
+    validates_presence_of :title
+    validates_presence_of :body
+    validates_imagination
+
+  end
+</pre>
+
 h2. Showing images
 
 To show an image, you simply call the imaginable method of your model.
