* Imaginable controllers for handling updated crop info. * Full-fledged Imaginable models. * Imaginable routes for AJAX interaction. * Updated schema helper. * Updated form builder. * Updated JS library to new API (incomplete).

--- a/README.textile
+++ b/README.textile
@@ -104,7 +104,7 @@ If you require the user to upload an image, you can use this handy validation he
 
     validates_presence_of :title
     validates_presence_of :body
-    validates_imagination
+    validates_imagination :photo
 
   end
 </pre>
